<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".LayoutExercise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strInstagram"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <ScrollView
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:layout_marginTop="34dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="88dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:background="#F44336"
                                    android:cropToPadding="false"
                                    app:srcCompat="@drawable/ic_launcher_foreground" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/strUsername" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="88dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:background="#00BCD4"
                                    android:cropToPadding="false"
                                    app:srcCompat="@drawable/ic_launcher_foreground" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/strUsername" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="88dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:background="#E91E63"
                                    android:cropToPadding="false"
                                    app:srcCompat="@drawable/ic_launcher_foreground" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/strUsername" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="88dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:background="#03A9F4"
                                    android:cropToPadding="false"
                                    app:srcCompat="@drawable/ic_launcher_foreground" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/strUsername" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="88dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:background="#9C27B0"
                                    android:cropToPadding="false"
                                    app:srcCompat="@drawable/ic_launcher_foreground" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/strUsername" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="88dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:background="#2196F3"
                                    android:cropToPadding="false"
                                    app:srcCompat="@drawable/ic_launcher_foreground" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/strUsername" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="54dp"
                            android:layout_height="41dp"
                            android:background="#009688"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="31dp"
                            android:text="@string/strUsername"
                            android:textAlignment="viewStart"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="410dp"
                        android:background="#CDDC39"
                        app:srcCompat="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/bntLike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/strLike" />

                        <Button
                            android:id="@+id/btnShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/strShare" />

                        <EditText
                            android:id="@+id/editTextTextPersonName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="Comment" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="54dp"
                            android:layout_height="41dp"
                            android:background="#009688"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="31dp"
                            android:text="@string/strUsername"
                            android:textAlignment="viewStart"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="410dp"
                        app:srcCompat="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/bntLike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/strLike" />

                        <Button
                            android:id="@+id/btnShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/strShare" />

                        <EditText
                            android:id="@+id/editTextTextPersonName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="Comment" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>